# RK1

./: CMakeLists.txt
.github/workflows/: build.yml
include/: pizza_store_crtp.h  pizza_store_nvi.h
src/: main_crtp.cpp  main_nvi.cpp  pizza_store_crtp.cpp  pizza_store_nvi.cpp
tests/: pizza_store_crtp_test.cpp  pizza_store_nvi_test.cpp
